deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: blue
  labels:
    app: blue
spec:
  replicas: 1
  selector:
    matchLabels:
      app: blue
  template:
    metadata:
      labels:
        app: blue
    spec:
        containers:
        - name: demo
          image: nyubblue/uda-web-frontend:v1.0.0
          imagePullPolicy: Always
          ports:
          - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: blue-service
  labels:
    app: demo
spec:
  ports:
  - protocol: TCP
    port: 8000
    targetPort: 80
  selector:
    app: blue
  type: NodePort
