deployment_back.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: back-end
  labels:
    app: back-end
spec:
  replicas: 2
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
    type: RollingUpdate
  selector:
    matchLabels:
      app: back-end
  template:
    metadata:
      labels:
        app: back-end
    spec:
      containers:
        - name: backEnd
          image: nyubblue/uda-web-backend:v1.0.1
          imagePullPolicy: Always
          ports:
            - containerPort: 3030
---
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  labels:
    app: backend
spec:
  ports:
    - protocol: TCP
      port: 3030
      targetPort: 3030
  selector:
    app: back-end
