deployment_front.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
spec:
  replicas: 1
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
    type: RollingUpdate
  selector:
    matchLabels:
      app: udacityapp
      tier: frontend
      track: stable
  template:
    metadata:
      labels:
        app: udacityapp
        tier: frontend
        track: stable
    spec:
      containers:
        - name: frontend-container
          image: nyubblue/uda-web-frontend:v1.0.1
          imagePullPolicy: Always
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
spec:
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  selector:
    app: udacityapp
    tier: frontend
  type: LoadBalancer
